# notes2latex-ocr

./: .gitignore  LICENSE  README.md  adapt_unimer.py  app.py  build_tokenizer.py  config.py  download_im2latex.py  evaluate.py  finetune.py  generate_synthetic.py  implementation_plan.md  predict.py  prepare_data.py  probe_val_batch.py  pyproject.toml  requirements.txt  runs.py  technical_specification.md  test_pipeline.py  train.py  tune.py  usage.md
data/: __init__.py  cache.py  dataset.py  preprocess.py  synthetic.py  tokenizer.py
labeling/: __init__.py  auto_label.py  config_s.py  export_yolo_y.py  find_duplicates.py  label_tool.py  slicer.py
model/: __init__.py  decoder.py  encoder.py  model.py  rope.py
src/: __init__.py  predict.py  train.py
src/data/: __init__.py  dataset.py
src/model/: __init__.py  decoder.py  encoder.py  model.py
tests/: test_decoder.py  test_encoder.py  test_model.py
utils/: __init__.py  beam_search.py  metrics.py  schedules.py  visualization.py
yolo_training/: compare_runs.py  config_y.py  data.yaml  f_data.yaml  test_model.py  train_yolo.py  yolo_param.md
